# codeSandbox

./: .gitignore  Dockerfile  READMD.md  README.md  execute_result.json  pom.xml
compile_env/: Dockerfile
execute_core/: Cargo.toml  file_dir.txt  request_args.json
execute_core/src/: lib.rs  main.rs
execute_core/test/: input-1.txt  input-3.txt  input-8.txt  main  main.cpp  main.py
src/main/resources/: application.yml
src/main/resources/permission/: DenyPermission.java  seccomp_profile_for_container.json
src/main/resources/testCode/: Main.java  main.c  main.cpp  main.rs
tempCodeRepository/693a5933-cb33-46f2-ac62-68dd1f804e9e/: file-dir.txt  request_args.json
tempCodeRepository/8859f46d-c731-4b02-beda-27f841b5f153/: Main.java  file-dir.txt  input-1.txt  request_args.json
tempCodeRepository/e4db8df0-cd83-433e-ad61-9bcd4a028ce9/: Main.java  file-dir.txt  request_args.json
tempCodeRepository/execute_core/: execute_core.d  libexecute_core.d
tempCodeRepository/execute_core/.fingerprint/autocfg-a6bcd067b2d90690/: lib-autocfg  lib-autocfg.json
tempCodeRepository/execute_core/.fingerprint/autocfg-e99d1d0186d0a800/: lib-autocfg  lib-autocfg.json
tempCodeRepository/execute_core/.fingerprint/base64-363c3b8c0690b234/: lib-base64  lib-base64.json
unsafe/delete_exception/: Main.java  main  main.cpp  testDelete.txt
unsafe/execute_exception/: Main.java  testExecute.sh
unsafe/memory_exception/: Main.java
unsafe/read_exception/: Main.java  testRead.txt
unsafe/reboot/: Main.java
unsafe/timeout_exception/: Main.java
unsafe/write_exception/: Main.java
(+273 files in other folders)
