[package]
name = "execute_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version="1.0.196", features = ["derive"]}
serde_json = {version="1.0.113"}
psutil = {version = "3.2.1", features = ["process"]}
base64 = "0.21.7"
tokio = { version = "1", features = ["full"] }